[gd_scene load_steps=2 format=3 uid="uid://bh0oh5yef7wwu"]

[ext_resource type="Script" path="res://world2/spawner2.gd" id="1_w1m27"]

[node name="spawner" type="Node"]
script = ExtResource("1_w1m27")

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_game_timer_timeout"]
